# testtask-codereviewai

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: __init__.py
app/api/endpoints/: review.py
app/core/: config.py  logging.py
app/models/: review.py
app/services/: github_service.py  openai_service.py  redis_service.py
tests/: test_review.py
